--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Crop Advisory</title>
     <link rel="stylesheet" href="css/main.css" />
-    <style>
+    <style> 
         body {
             margin: 0;
             padding: 0;
@@ -85,3 +85,5 @@
 <script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
 </body>
 </html>
+
+<!-- added something -->
