--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Crop Advisory</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="GreenHarvest_Logo.png">
     <style> 
         body {
             margin: 0;
