--- a/pages/crop_calendar.html
+++ b/pages/crop_calendar.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<<<<<<< HEAD
+<!-- <<< HEAD<<<< -->
     <link rel="icon" href="/smart_crop_advisory/GreenHarvest_Logo.png">
-=======
+<!-- ======= -->
     <link rel="icon" href="/GreenHarvest_Logo.png">
->>>>>>> 3d4ad841725cc3b5c1965b065a3bbbfd125a01fe
+<!-- >>>>>>> 3d4ad841725cc3b5c1965b065a3bbbfd125a01fe -->
 <script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fsmartcrop5576back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
 </head>
 <body class="bg-background min-h-screen">
